--- a/datavis/src/app.html
+++ b/datavis/src/app.html
@@ -3,10 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+        <nav class="navbar bg-body-tertiary">
+            <form class="container-fluid justify-content-start">
+                <a href="/"><button class="btn btn-outline-success me-2" type="button">Home</button></a>
+                <a href="/cars"><button class="btn btn-outline-success me-2" type="button">Car Overview</button></a>
+                <h1>Petar Benjak - KU Leuven - r0924552</h1>
+            </form>
+        </nav>
+        
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
